Fixed Text Align

--- a/Spotify-Project/src/app/artist/artist.component.css
+++ b/Spotify-Project/src/app/artist/artist.component.css
@@ -7,7 +7,7 @@
 /* Artist Names under cover photo */
 .artistImageArtistName {
     text-align: center;
-    max-width: 250px;
+    
     padding-bottom: 5px;
     /* if name is too big cut off */
     white-space: nowrap;
@@ -43,7 +43,7 @@
 .artistList {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 10px;
+    grid-gap: 2.5px;
     align-self: stretch;
     justify-self: stretch;
     align-content: space-evenly;
@@ -57,8 +57,6 @@
     padding: 10px;
     padding-bottom: 20px;
     text-align: center;
-    ;
-
 }
 
 /*All stylying for obscure slider*/
